hotfix for ini problem